--- a/Lesson2_HW/hw_2.html
+++ b/Lesson2_HW/hw_2.html
@@ -6,10 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        div {
+            width: 100px;
+            height: 20px;
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
 
-<h1></h1>
+
 
 <script src="main.js"></script>
 
