--- a/Additional/add_2.html
+++ b/Additional/add_2.html
@@ -2,35 +2,67 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Users List</title>
+        <style>
+
+            body {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: wrap;
+            }
+
+            .users-box {
+                width: 980px;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+
+            }
+            .user-block {
+                width: 400px;
+                height: 300px;
+                margin: 5px;
+                border: green solid 1px;
+                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+            }
+            .user-block h2 {
+                font-size: 18px;
+            }
+            .user-block h3 {
+                margin: 0;
+                font-size: 14px;
+            }
+
+        </style>
     </head>
     <body>
 
         <!--template 1.1-->
-        <div class="users-box">
-            <div class="user-block">
-                <h2>ID - NAME - USERNAME </h2>
-                <h3>EMAIL - PHONE</h3>
-                <div class="address-block">
-                    <p>City - ADDRESS.CITY</p>
-                    <p>Street - ADDRESS.STREET</p>
-                    <p>Suite - ADDRESS.SUITE</p>
-                    <p>Zip code - ADDRESS.ZIPCODE</p>
-                </div>
 
-            </div>
+<!--        <div class="users-box">-->
+<!--            <div class="user-block">-->
+<!--                <h2>ID - NAME - USERNAME </h2>-->
+<!--                <h3>EMAIL - PHONE</h3>-->
+<!--                <div class="address-block">-->
+<!--                    <p>City - ADDRESS.CITY</p>-->
+<!--                    <p>Street - ADDRESS.STREET</p>-->
+<!--                    <p>Suite - ADDRESS.SUITE</p>-->
+<!--                    <p>Zip code - ADDRESS.ZIPCODE</p>-->
+<!--                </div>-->
 
+<!--            </div>-->
             <!--
-
             ...
             ...
             ...
             other users
-
             -->
-
-
-        </div>
+<!--        </div>-->
 
 
         <script>
@@ -272,6 +304,28 @@
 				}
 			];
 
+
+            document.write(`<div class="users-box">`)
+            for (let i = 0; i < usersList.length; i++) {
+                const user = usersList[i];
+                document.write(`
+
+                     <div class="user-block">
+                          <h2> ${user.id} -  ${user.name} - ${user.username} </h2>
+                          <h3> ${user.email} -  ${user.phone}</h3>
+                     <div class="address-block">
+                          <p>City - ${user.address.city}</p>
+                          <p>Street - ${user.address.street}</p>
+                          <p>Suite - ${user.address.suite}</p>
+                          <p>Zip code - ${user.address.zipcode}</p>
+                     </div>
+                     </div>
+
+                `)
+                console.log(user);
+
+            }
+            document.write(`</div>`)
 
         </script>
 
