--- a/Lesson_10_HW/4_hw_10.html
+++ b/Lesson_10_HW/4_hw_10.html
@@ -717,62 +717,81 @@
     ];
     console.log(locations);
 
-    // for (let i = 0; i < locations.length; i++) {
-    //     const location = locations[i];
-    //
-    //     let div = document.createElement('div');
-    //     div.style.cssText = `height: 120px; width: 300px; border: 1px solid black; margin: 2px;`;
-    //
-    //     let h3 = document.createElement('h3')
-    //     h3.innerText = `Назва: ${location.title}`;
-    //     let p = document.createElement('p');
-    //     p.innerText = `Тип: ${location.type}`
-    //
-    //     div.append(h3, p);
-    //
-    //     document.body.appendChild(div);
-    // }
-
-
     let start = 0;
-    let step = 10;
+    let step = 5;
     let limit = start + step;
 
-    let prevButton = document.getElementById('prev');
+    let fIteration = function () {
 
-    prevButton.onclick = function () {
         for (let i = start; i < limit; i++) {
-            if (i < locations.length){
-                console.log (i);
 
-                let div = document.createElement('div');
-                    div.style.cssText = `height: 120px; width: 300px; border: 1px solid black; margin: 2px;`;
-
-                    let h3 = document.createElement('h3')
-                    h3.innerText = `Назва: ${locations[i].title}`;
-                    let p = document.createElement('p');
-                    p.innerText = `Тип: ${locations[i].type}`;
-
-                    div.append(h3, p);
-
-                    document.body.appendChild(div);
+            if (i < locations.length) {
+                console.log(i);
             }
+
+            const location = locations[i];
+
+            let div = document.createElement('div');
+            div.style.cssText = `height: 120px; width: 300px; border: 1px solid black; margin: 2px;`;
+
+            let h3 = document.createElement('h3')
+            h3.innerText = ` ${i} Назва: ${location.title}`;
+            let p = document.createElement('p');
+            p.innerText = `Тип: ${location.type}`
+
+            div.append(h3, p);
+
+            document.body.appendChild(div);
         }
         start = limit;
         limit = limit + step;
     }
-    
-    let nextButton = document.getElementById('next');
 
-    nextButton.onclick = function () {
-        // for (let i = limit; i >= start; i--) {
-        //     if (i < locations.length){
-        //         console.log(i);
-        //     }
-        // }
-        // start = limit;
-        // limit = limit + step;
-    }
+    // fIteration();
+
+    let prevButton = document.getElementById('prev');
+    prevButton.addEventListener('click', () => fIteration ());
+
+    let nextButton = document.getElementById('next');
+    nextButton.addEventListener('click', () => fIteration ())
+
+
+
+    // prevButton.onclick = function () {
+    //
+    //     for (let i = start; i < limit; i++) {
+    //         if (i < locations.length){
+    //             console.log (i);
+    //
+    //             let div = document.createElement('div');
+    //                 div.style.cssText = `height: 80px; width: 300px; border: 1px solid black; margin: 2px;`;
+    //
+    //                 let h3 = document.createElement('h3')
+    //                 h3.innerText = ` ${i} Назва: ${locations[i].title}`;
+    //                 let p = document.createElement('p');
+    //                 p.innerText = `Тип: ${locations[i].type}`;
+    //
+    //                 div.append(h3, p);
+    //
+    //                 document.body.appendChild(div);
+    //         }
+    //     }
+    //     start = limit;
+    //     limit = limit + step;
+    // }
+
+    
+
+
+    // nextButton.onclick = function () {
+    //     for (let i = limit; i >= start; i--) {
+    //         if (i > locations.length){
+    //             console.log(i);
+    //         }
+    //     }
+    //     start = limit;
+    //     limit = limit - step;
+    // }
 
 
 
